Denote Spark 3.0.1 Release

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,26 @@ hr {
 
 <div id="pageBody">
 
+<h2>3.0.1 -- <span style="font-weight: normal;">December 12, 2022</span></h2>
+<h2>Bug</h2>
+<ul>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2310'>SPARK-2310</a>] - macOS doesn't use Look and Feel FlatLaf</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2313'>SPARK-2313</a>] - History not saved in some cases</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2316'>SPARK-2316</a>] - Unable to open MUC while MUC private chat is open</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2317'>SPARK-2317</a>] - HTTP File Upload Plugin button not showing in private chat</li>
+</ul>
+
+<h2>Task</h2>
+<ul>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2315'>SPARK-2315</a>] -  Update dependencies</li>
+</ul>
+
+<h2>Improvement</h2>
+<ul>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-2305">SPARK-2305</a>] - Improve logging for HTTP File Upload</li>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-2311">SPARK-2311</a>] - Add Tab View Selection</li>
+</ul>
+
 <h2>3.0.0 -- <span style="font-weight: normal;">November 14, 2022</span></h2>
 <h2>Improvement</h2>
 <ul>
