Add Preference panel

--- a/plugins/translator/src/main/resources/changelog.html
+++ b/plugins/translator/src/main/resources/changelog.html
@@ -43,6 +43,12 @@
 <h1>
 Translator Spark plug Changelog
 </h1>
+<p><b>2.0</b> -- December 30th, 2022</p>
+<ul>
+    <li>Replace Google API with LibreTranslate API</li>
+    <li>Add Preference panel</li>
+    <li>Add defaults and i18n</li>
+</ul>
 <p><b>1.4</b> -- March 17th, 2011</p>
 <ul>
     <li>Adjusted to Google's new translator layout for Spark 2.6.x</li>
