--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,35 @@ hr {
 
 <div id="pageBody">
 
+<h2>3.0.2 -- <span style="font-weight: normal;">March 31, 2023</span></h2>
+<h2>Bug</h2>
+<ul>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-1815'>SPARK-1815</a>] - Roar custom popup can't be closed after closing the chat window</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2163'>SPARK-2163</a>] - TicTacToe throws exception for username with a space</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2318'>SPARK-2318</a>] - Roar ignores Popup display settings</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2320'>SPARK-2320</a>] - Save password from Preferences menu</li>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2327'>SPARK-2327</a>] - Chat window freezes when opponent is typing to you</li>
+</ul>
+
+<h2>Task</h2>
+<ul>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2319'>SPARK-2319</a>] -  Update Roar Plugin to 1.0 version</li>
+</ul>
+
+<h2>Improvement</h2>
+<ul>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-1782">SPARK-1782</a>] - Roar popups shouldn't be shown when a tab is in focus</li>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-2321">SPARK-2321</a>] - Don't show empty broadcast message</li>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-2322">SPARK-2322</a>] - Raise the minimum requirements for plugins</li>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-2324">SPARK-2324</a>] - Upgrade XStream to v1.4.20 or later</li>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-2326">SPARK-2326</a>] - Update HTTP Client library</li>
+</ul>
+
+<h2>New Feature</h2>
+<ul>
+<li>[<a href="https://igniterealtime.atlassian.net/browse/SPARK-1457">SPARK-1457</a>] - Update Translator plugin to use other translation API</li>
+</ul>
+
 <h2>3.0.1 -- <span style="font-weight: normal;">December 12, 2022</span></h2>
 <h2>Bug</h2>
 <ul>
